Checkbox & Radio: fixed for high contrast mode (#237)

--- a/src/less/checkbox/ds6/checkbox-base.less
+++ b/src/less/checkbox/ds6/checkbox-base.less
@@ -67,3 +67,13 @@
         .inline-icon-base(1.125rem, 1.125rem);
     }
 }
+
+@media screen and (-ms-high-contrast: white-on-black) {
+    .checkbox__control[type="checkbox"]:checked + .checkbox__icon:not([hidden]) {
+        background-image: url('data:image/svg+xml;base64,@{ds6-icon-checkbox-checked-base64-light}');
+    }
+
+    .checkbox__icon:not([hidden]) {
+        background-image: url('data:image/svg+xml;base64,@{ds6-icon-checkbox-unchecked-base64-light}');
+    }
+}
